@@ -1,8 +1,7 @@
-body
+body, html
 {
-    margin: 0;
+    margin: 0 !important;
+    padding: 0 !important;
     overflow: hidden;
     background-color: black;
-    color: white;
-    font-family: monospace;
 }
