@@ -1,5 +1,10 @@
 23/12/23
 
+Full screen resizable canvas
+
+
+22/12/23
+
 Main engine
 Tris
 Tris rotation
